--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             font-weight: bolder !important;
         }
         
-        .title {
+        .title2 {
             font-size: 170% !important;
             color: rgb(112, 111, 111);
         }
@@ -307,7 +307,7 @@
             <div class="section">
                 <div class="row">
                     <div class="col-lg-6 text-center float-right">
-                        <h3 class="title"><b>Title - What we do here</b></h3>
+                        <h3 class="title2"><b>Title - What we do here</b></h3>
                         <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
                             optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
                             tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium</p>
@@ -321,7 +321,7 @@
                         <img style="width: 100%; height: 100%;" src="trade/images/car/3.jpg" alt="charity web image">
                     </div>
                     <div class="col-lg-6 text-center float-right mt-4">
-                        <h3 class="title"><b>Title - What we do here</b></h3>
+                        <h3 class="title2"><b>Title - What we do here</b></h3>
                         <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
                             optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
                             tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium</p>
