--- a/details.html
+++ b/details.html
@@ -10,25 +10,25 @@
     <title>Trade | World's Largest Classifieds Portal</title>
 
    <!-- CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" >
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/icofont.css">
-    <link rel="stylesheet" href="css/owl.carousel.css">  
-    <link rel="stylesheet" href="css/slidr.css">     
-    <link rel="stylesheet" href="css/main.css">  
-	<link id="preset" rel="stylesheet" href="css/presets/preset1.css">	
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="trade/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="trade/css/font-awesome.min.css">
+	<link rel="stylesheet" href="trade/css/icofont.css">
+    <link rel="stylesheet" href="trade/css/owl.carousel.css">  
+    <link rel="stylesheet" href="trade/css/slidr.css">     
+    <link rel="stylesheet" href="trade/css/main.css">  
+	<link id="preset" rel="stylesheet" href="trade/css/presets/preset1.css">	
+    <link rel="stylesheet" href="trade/css/responsive.css">
 	
 	<!-- font -->
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,500,700,300' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Signika+Negative:400,300,600,700' rel='stylesheet' type='text/css'>
 
 	<!-- icons -->
-	<link rel="icon" href="images/ico/favicon.ico">	
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/ico/apple-touch-icon-57-precomposed.png">
+	<link rel="icon" href="trade/images/ico/favicon.ico">	
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="trade/images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="trade/images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="trade/images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="trade/images/ico/apple-touch-icon-57-precomposed.png">
     <!-- icons -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -49,7 +49,7 @@
                     <span class="navbar-toggler-icon"><i class="fa fa-align-justify"></i></span>
                 </button>
 
-                <a class="navbar-brand" href="index.html"><img style="width: 50px; height: 60px;" class="img-fluid" src="images/logo.png" alt="Logo"></a>
+                <a class="navbar-brand" href="index.html"><img style="width: 50px; height: 60px;" class="img-fluid" src="trade/images/logo.png" alt="Logo"></a>
 				
 				<div class="collapse navbar-collapse" id="tr-mainmenu">
 					<ul class="nav navbar-nav">
@@ -174,19 +174,19 @@
 							<!-- Indicators -->
 							<ol class="carousel-indicators">
 								<li data-target="#product-carousel" data-slide-to="0" class="active">
-									<img src="images/slider/list-1.jpg" alt="Carousel Thumb" class="img-fluid">
+									<img src="trade/images/slider/list-1.jpg" alt="Carousel Thumb" class="img-fluid">
 								</li>
 								<li data-target="#product-carousel" data-slide-to="1">
-									<img src="images/slider/list-2.jpg" alt="Carousel Thumb" class="img-fluid">
+									<img src="trade/images/slider/list-2.jpg" alt="Carousel Thumb" class="img-fluid">
 								</li>
 								<li data-target="#product-carousel" data-slide-to="2">
-									<img src="images/slider/list-3.jpg" alt="Carousel Thumb" class="img-fluid">
+									<img src="trade/images/slider/list-3.jpg" alt="Carousel Thumb" class="img-fluid">
 								</li>
 								<li data-target="#product-carousel" data-slide-to="3">
-									<img src="images/slider/list-4.jpg" alt="Carousel Thumb" class="img-fluid">
+									<img src="trade/images/slider/list-4.jpg" alt="Carousel Thumb" class="img-fluid">
 								</li>
 								<li data-target="#product-carousel" data-slide-to="4">
-									<img src="images/slider/list-5.jpg" alt="Carousel Thumb" class="img-fluid">
+									<img src="trade/images/slider/list-5.jpg" alt="Carousel Thumb" class="img-fluid">
 								</li>
 							</ol>
 
@@ -196,7 +196,7 @@
 								<div class="item carousel-item active">
 									<div class="carousel-image">
 										<!-- image-wrapper -->
-										<img src="images/slider/1.jpg" alt="Featured Image" class="img-fluid">
+										<img src="trade/images/slider/1.jpg" alt="Featured Image" class="img-fluid">
 									</div>
 								</div><!-- item -->
 
@@ -204,7 +204,7 @@
 								<div class="item carousel-item">
 									<div class="carousel-image">
 										<!-- image-wrapper -->
-										<img src="images/slider/2.jpg" alt="Featured Image" class="img-fluid">
+										<img src="trade/images/slider/2.jpg" alt="Featured Image" class="img-fluid">
 									</div>
 								</div><!-- item -->
 
@@ -212,7 +212,7 @@
 								<div class="item carousel-item">
 									<div class="carousel-image">
 										<!-- image-wrapper -->
-										<img src="images/slider/3.jpg" alt="Featured Image" class="img-fluid">
+										<img src="trade/images/slider/3.jpg" alt="Featured Image" class="img-fluid">
 									</div>
 								</div><!-- item -->
 
@@ -220,7 +220,7 @@
 								<div class="item carousel-item">
 									<div class="carousel-image">
 										<!-- image-wrapper -->
-										<img src="images/slider/4.jpg" alt="Featured Image" class="img-fluid">
+										<img src="trade/images/slider/4.jpg" alt="Featured Image" class="img-fluid">
 									</div>
 								</div><!-- item -->
 
@@ -228,7 +228,7 @@
 								<div class="item carousel-item">
 									<div class="carousel-image">
 										<!-- image-wrapper -->
-										<img src="images/slider/5.jpg" alt="Featured Image" class="img-fluid">
+										<img src="trade/images/slider/5.jpg" alt="Featured Image" class="img-fluid">
 									</div>
 								</div><!-- item -->
 							</div><!-- carousel-inner -->
@@ -405,24 +405,24 @@
 		
 		<div class="footer-bottom clearfix text-center">
 			<div class="container">
-				<p>Copyright &copy; 2018. Developed by <a href="http://themeregion.com/">Revotech Solutions</a></p>
+				<p>Copyright &copy; 2018. Developed by <a href="#">Revotech Solutions</a></p>
 			</div>
 		</div><!-- footer-bottom -->
 	</footer><!-- footer -->
 
 	
      <!-- JS -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/modernizr.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="trade/js/jquery.min.js"></script>
+    <script src="trade/js/popper.min.js"></script>
+    <script src="trade/js/modernizr.min.js"></script>
+    <script src="trade/js/bootstrap.min.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<script src="js/gmaps.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/scrollup.min.js"></script>
-    <script src="js/price-range.js"></script>
-    <script src="js/jquery.countdown.js"></script>    
-    <script src="js/custom.js"></script>
+	<script src="trade/js/gmaps.min.js"></script>
+    <script src="trade/js/owl.carousel.min.js"></script>
+    <script src="trade/js/scrollup.min.js"></script>
+    <script src="trade/js/price-range.js"></script>
+    <script src="trade/js/jquery.countdown.js"></script>    
+    <script src="trade/js/custom.js"></script>
 
   </body>
 </html>
