--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Theme Region">
     <meta name="description" content="">
 
-    <title>Charity website</title>
+    <title>HelpThem.info</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="trade/css/bootstrap.min.css">
@@ -67,7 +67,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tr-mainmenu" aria-controls="tr-mainmenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa fa-align-justify"></i></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img class="img-fluid" src="trade/images/logo.png" alt="Logo"></a>
+                <a class="navbar-brand" href="index.html"><img style="width: 50px; height: 60px;" class="img-fluid" src="trade/images/logo.png" alt="Logo"></a>
 
                 <div class="collapse navbar-collapse" id="tr-mainmenu">
                     <ul class="nav navbar-nav">
@@ -1151,8 +1151,40 @@
                 </div>
             </div>
             <!-- trending-ads -->
+        <!-- container -->
+    </section>
+    <!-- home-one-info -->
 
-            <!-- cta -->
+ <!-- style="background-image: url(trade/images/letshelp.jpeg); background-repeat: no-repeat; color: white; width: 100%; overflow: hidden; -->
+
+    <section>
+        <div class="midBanner" style="width: 100%; overflow: hidden;">
+                <img src="trade/images/bannerLight.jpeg" alt=""/>
+            <div class="row bg-danger">
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-lg-6 col-lg-6">
+                <div class="midBannerText">Let Us<br/>Help<br/>Them</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="">
+        <div style="width: 100%; height: 300px; overflow: hidden;">
+            <img style="width: 100%;" src="trade/images/letshelp.jpeg">
+        </div>
+        <div class="row " style="position: relative; margin-top: -260px;">
+            <div class="col-md-5 offset-md-1 text-light">
+                <center><h4 class="mt-3" style="font-size: 500%; font-weight: bolder; margin-left: 5px;">Let's Help Them</h4></center>
+                <center><button style="position: relative; top: 30px;" class="btn-primary btn mt-md-5 mt-3 mb-5">JOIN WITH US</button></center>
+            </div>
+            <div class="col-md-5"><center><img style="width: 60%;" src="trade/images/ourLogo.png"></center></div>
+        </div>
+    </section> -->
+    
+    <section>
+         <!-- cta -->
             <div class="cta text-center">
                 <div class="row">
                     <!-- single-cta -->
@@ -1204,9 +1236,7 @@
             </div>
             <!-- cta -->
         </div>
-        <!-- container -->
     </section>
-    <!-- home-one-info -->
 
     <!-- download -->
     <section id="download" class="clearfix parallax-section">
