--- a/ad-post-details.html
+++ b/ad-post-details.html
@@ -204,10 +204,8 @@
                                     <div class="row form-group select-price">
                                         <label class="col-sm-3 label-title">Budget<span class="required">*</span></label>
                                         <div class="col-sm-9">
-                                            <label>LKR</label>
-                                            <input type="text" class="form-control" id="text1">
-                                            <!-- <input type="radio" name="price" value="negotiable" id="negotiable">
-                                            <label for="negotiable">Negotiable </label> -->
+                                            <input type="number" class="form-control" id="text1">
+                                            <span>Add your budget in <b>LKR</b></span>
                                         </div>
                                     </div>
                                     <div class="row form-group brand-name">
@@ -235,14 +233,14 @@
                                     <div class="row form-group model-name">
                                         <label class="col-sm-3 label-title">Mobile No.<span class="required">*</span></label>
                                         <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="model" placeholder="">
+                                            <input type="number" class="form-control" id="model" placeholder="">
                                         </div>
                                     </div>
 
                                     <div class="row form-group model-name">
                                         <label class="col-sm-3 label-title">Email<span class="required">*</span></label>
                                         <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="model" placeholder="">
+                                            <input type="email" class="form-control" id="model" placeholder="">
                                         </div>
                                     </div>
 
@@ -327,11 +325,9 @@
                                 <!-- section -->
 
                                 <div class="checkbox section agreement">
-                                    <label for="send">
-										<input type="checkbox" name="send" id="send">
-										Send me Trade Email/SMS Alerts for people looking to buy mobile handsets in www By clicking "Post", you agree to our <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a> and acknowledge that you are the rightful owner of this item and using Trade to find a genuine buyer.
-									</label>
-                                    <button type="submit" class="btn btn-primary">Post</button>
+                                    <input type="checkbox" name="send" id="send">
+                                    <span class="ml-4">I accept all of the rules and regulations</span><br/>
+                                    <button type="submit" class="mt-3 btn btn-primary">Post</button>
                                 </div>
                                 <!-- section -->
 
